server/public/assets/styles/sass/main.scss
//reset browser defaults using Normalize.css
@import "imports/normalize";

//imports colors
@import "imports/config";

//import mixins
@import "imports/mixins";
@import "imports/responsive";

//import basic 12-column grid and defualt tag settings
@import "imports/grid";
@import "imports/type";

//use Font Awesome for icons
@import "imports/icons";



// $brown: #372213;
// $orange: #DC7238;
// $yellow: #F4B73C;
// $green: #68A445;

//defualt button styling to be seperated out later

$buttonColor: $green;
$buttonDark: darken($green, 10%);
$buttonDarker: darken($buttonDark, 10%);

button {
  background: $green;
  border-radius: 3px;
  // box-shadow: 0px 5px 0px $buttonDark;
  border: 0;
  color: white;
  font-size: 17px;
  padding: 10px 30px;
  display: inline-block;
  outline: 0;
  &:hover {
    background: $buttonDark;
    // box-shadow: 0px 5px 0px $buttonDarker;
  }
  &:active {
    // box-shadow: none;
    background: $buttonDarker;
    position: relative;
    left: 2px;
    top: 2px;
    // margin-top: 5px;
  }
}

body {
  text-align: center;
}

//index styling

.banner {
  margin-bottom: 20px;
  margin-left: 0;
}
.header {
  background-color: $orangebackground;
  border-bottom: 1px solid $brown;
}

.logo {
  display: block;
  float: left;
  padding-top: 10px;
}
.title {
  display: inline-block;
  padding-top: 30px;
}
.logout {
  text-align: left;
  p {
    display: inline-block;
    // float: left;
  }
  a {
    display: inline-block;;
  }
}

.nav {
  margin-bottom: 20px;
  border-bottom: 1px solid $brown;
  a {
    // width: (100% / 3);
  }
  button {
    width: (100% / 3);
    border-radius: 0;
    margin: 0;
    box-shadow: none;
    opacity: 0.95;
  }
}
img.bg {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;

  /* Set up proportionate scaling */
  width: 100%;
  height: auto;

  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
  z-index: -100;
}

@media screen and (max-width: 1024px) { /* Specific to this particular image */
  img.bg {
    left: 50%;
    margin-left: -512px;   /* 50% */
  }
}

//login styling to be seperated out later

.login, .login-title {
  border: 1px solid $brown;
  margin: 20px auto;
  background-color: $whitebackground;
  button {
    margin-top: 10px;
    margin-bottom: 20px;
  }
}

//dashboard styling
.container {
  background-color: $whitebackground;
  border: 1px solid $brown;
  text-align: left;
}
.push-right {
  display: block;
  float: right;
}
.header {
  h4 {
    display: inline;
    // float: left;
  }
}
.event-content li {
  display: inline-block;
}

